--- a/supports/style.css
+++ b/supports/style.css
@@ -499,7 +499,393 @@ body
         text-align: center;
         width: 100%;
       }
+      #page-header{
+        background-image: url(logo/Banner/b1.jpg);
+        width: 100%;
+        height: 40vh;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction:column ;
+        padding: 14px;
+      }
+      #page-header.blog-header {
+        background-image: url(logo/Banner/b19.jpg);
+      }
+      #blog {
+        padding: 150px 150px 0 150px;
 
+      }
+      #blog.blog-box {
+        display: flex;
+        width: 100%;
+      }
+      #blog.blog-img {
+        width: 100%;
+        height: 300px;
+       object-fit: cover;
+      }
+      #blog img {
+        width: 100%;
+        height: 300%;
+      }
+      #page-header h2,
+      page-header p   {
+        color: #ffffff;
+        font-size: 30px;
+        font-weight: 800;
+      }
+      #pagination {
+        text-align: center;
+      }
+      #pagination a {
+      text-decoration: none;
+      background-color: #4b1e5b;
+      padding: 15px 20px;
+      border: 4px;
+      color: #ffffff;
+      font-weight: 600;
+      }
+      #pagination a i {
+        font-size: 16px;
+        font-weight: 600;
+      }
+      
+      #productdetails{
+        margin-top: 20px;
+        
+      }
+      #productdetails .single-pro-img {
+        width: 40%;
+        margin: 50px;
+      }
+
+      #productdetails .single-pro-details {
+        width: 50%;
+        padding-top: 30px;
+
+      }
+      #productdetails .single-pro-details h4 {
+        padding: 40px 0 20px 0;
+      }
+      #productdetails .single-pro-details h2 {
+       font-size: 26px;
+         }
+     #productdetails .single-pro-details select {
+          display: block;
+          padding: 5px 10px;
+          margin-bottom: 10px;
+     }
+     #productdetails .single-pro-details input{
+      width: 50px;
+      height: 47px;
+      padding-left: 10px;
+      font-size: 16px;
+      margin-right: 10px;
+    }
+    #productdetails .single-pro-details input:focus {
+      outline: none;
+    }
+    #productdetails .single-pro-details button {
+     background-color: #4b1e5b; 
+     color: #ffffff;
+    }
+    
+    #productdetails .single-pro-details span{
+      line-height: 25px;
+    }
+
+
+  .small-img-group {
+        display: flex;
+        justify-content: space-between;
+        
+      }
+   .small-img-col {
+        flex-basis: 24%;
+        cursor: pointer;
+      }
+
+:root{
+   --blue:#3498db;
+   --red:#e74c3c;
+   --orange:#f39c12;
+   --black:#333;
+   --white:#fff;
+   --light-bg:#eee;
+   --box-shadow:0 5px 10px rgba(0,0,0,.1);
+   --border:2px solid var(--black);
+}
+
+*{
+   font-family: 'Poppins', sans-serif;
+   margin:0; padding:0;
+   box-sizing: border-box;
+   outline: none; border: none;
+   text-decoration: none;
+}
+
+*::-webkit-scrollbar{
+   width: 10px;
+   height: 5px;
+}
+
+*::-webkit-scrollbar-track{
+   background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb{
+   background-color: var(--blue);
+}
+
+body{
+   background-color: var(--light-bg);
+}
+
+.message{
+   position: sticky;
+   top:0; left:0; right:0;
+   padding:15px 10px;
+   background-color: var(--white);
+   text-align: center;
+   z-index: 1000;
+   box-shadow: var(--box-shadow);
+   color:var(--black);
+   font-size: 20px;
+   text-transform: capitalize;
+   cursor: pointer;
+}
+
+.btn,
+.delete-btn,
+.option-btn{
+   display: inline-block;
+   padding:10px 30px;
+   cursor: pointer;
+   font-size: 18px;
+   color:var(--white);
+   border-radius: 5px;
+   text-transform: capitalize;
+}
+
+.btn:hover,
+.delete-btn:hover,
+.option-btn:hover{
+   background-color: var(--black);
+}
+
+.btn{
+   background-color: var(--blue);
+   margin-top: 10px;
+}
+
+.delete-btn{
+   background-color: var(--red);
+}
+
+.option-btn{
+   background-color: var(--orange);
+}
+
+.form-container{
+   min-height: 100vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding:20px;
+   padding-bottom: 70px;
+}
+
+.form-container form{
+   width: 500px;
+   border-radius: 5px;
+   border:var(--border);
+   padding:20px;
+   text-align: center;
+   background-color: var(--white);
+}
+
+.form-container form h3{
+   font-size: 30px;
+   margin-bottom: 10px;
+   text-transform: uppercase;
+   color:var(--black);
+}
+
+.form-container form .box{
+   width: 100%;
+   border-radius: 5px;
+   border:var(--border);
+   padding:12px 14px;
+   font-size: 18px;
+   margin:10px 0;
+}
+
+.form-container form p{
+   margin-top: 20px;
+   font-size: 20px;
+   color:var(--black);
+}
+
+.form-container form p a{
+   color:var(--red);
+}
+
+.form-container form p a:hover{
+   text-decoration: underline;
+}
+
+.container{
+   padding:0 20px;
+   margin:0 auto;
+   max-width: 1200px;
+   padding-bottom: 70px;
+}
+
+.container .heading{
+   text-align: center;
+   margin-bottom: 20px;
+   font-size: 40px;
+   text-transform: uppercase;
+   color:var(--black);
+}
+
+.container .user-profile{
+   padding:20px;
+   text-align: center;
+   border:var(--border);
+   background-color: var(--white);
+   box-shadow: var(--box-shadow);
+   border-radius: 5px;
+   margin:20px auto;
+   max-width: 500px;
+}
+
+.container .user-profile p{
+   margin-bottom: 10px;
+   font-size: 25px;
+   color:var(--black);
+}
+
+.container .user-profile p span{
+   color:var(--red);
+}
+
+.container .user-profile .flex{
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   gap:10px;
+   align-items: flex-end;
+}
+
+.container .products .box-container{
+   display: flex;
+   flex-wrap: wrap;
+   gap:15px;
+   justify-content: center;
+}
+
+.container .products .box-container .box{
+   text-align: center;
+   border-radius: 5px;
+   box-shadow: var(--box-shadow);
+   border:var(--border);
+   position: relative;
+   padding:20px;
+   background-color: var(--white);
+   width: 350px;
+}
+
+.container .products .box-container .box img{
+   height: 250px;
+}
+
+.container .products .box-container .box .name{
+   font-size: 20px;
+   color:var(--black);
+   padding:5px 0;
+}
+
+.container .products .box-container .box .price{
+   position: absolute;
+   top:10px; left:10px;
+   padding:5px 10px;
+   border-radius: 5px;
+   background-color: var(--orange);
+   color:var(--white);
+   font-size: 25px;
+}
+
+.container .products .box-container .box input[type="number"]{
+   margin:10px 0;
+   width: 100%;
+   border:var(--border);
+   border-radius: 5px;
+   font-size: 20px;
+   color:var(--black);
+   padding:12px 14px
+}
+
+.container .shopping-cart{
+   padding:20px 0;
+}
+
+.container .shopping-cart table{
+   width: 100%;
+   text-align: center;
+   border:var(--border);
+   border-radius: 5px;
+   box-shadow: var(--box-shadow);
+   background-color: var(--white);
+}
+
+.container .shopping-cart table thead{
+   background-color: var(--black);
+}
+
+.container .shopping-cart table thead th{
+   padding:10px;
+   color:var(--white);
+   text-transform: capitalize;
+   font-size: 20px;
+}
+
+.container .shopping-cart table .table-bottom{
+   background-color: var(--light-bg);
+}
+
+.container .shopping-cart table tr td{
+   padding:10px;
+   font-size: 20px;
+   color:var(--black);
+}
+
+.container .shopping-cart table tr td:nth-child(1){
+   padding:0;
+}
+
+.container .shopping-cart table tr td input[type="number"]{
+   width: 80px;
+   border:var(--border);
+   padding:12px 14px;
+   font-size: 20px;
+   color:var(--black);
+}
+
+.container .shopping-cart .cart-btn{
+   margin-top: 10px;
+   text-align: center;
+}
+
+.container .shopping-cart .disabled{
+   pointer-events: none;
+   background-color: var(--red);
+   opacity: .5;
+   user-select: none;
+}
+    
 
       @media (max-width: 799px) {
         .section-p1 {
@@ -642,6 +1028,28 @@ body
       #footer .copyright{
        text-align: start;
       }
+      #productdetails {
+        display: flex;
+        flex-direction: column;
+      }
+      #productdetails .single-pro-img {
+        width: 100%;
+        padding-top: 0px;
+
+      }
+      #productdetails .single-pro-details {
+        width: 100%;
+       
+
+      }
     }
-  
-        
+    .card-img-top {
+      width: 100%;
+      height: 200px;
+      object-fit: contain;
+    }
+   /* .admin_img {
+      width: 100px;
+      object-fit: contain;
+    }*/
+    
